src/np222kk/dv507/a2/test/cases/positive/test_while.ofp
void main() {
    while(true) {
        print("Hello World!");
    }
}