src/np222kk/dv507/a2/test/cases/negative/test_neg_introduction.ofp
# test_neg_introduction

string x = 1;

void main() {
    print("Hello World!");

}

int a;